feat(assets): use local token images and update scripts
- Updates token definitions to use local PNG images from the /public directory instead of remote URLs. This improves performance and reliability.
- Adds a 'clean' script to package.json for removing build artifacts and node_modules.
- Includes the new local image assets (eth.png, wbtc.png, usdc.png).

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "clean": "npx rimraf node_modules package-lock.json .cache .next .nuxt dist out"
   },
   "dependencies": {
     "@coinbase/onchainkit": "latest",
