fix(ci): Add explicit instruction to avoid command substitution
The Gemini CLI workflow was failing due to the model attempting to use command substitution, which is disabled for security. This commit updates the prompt with an explicit guideline instructing the model to run commands sequentially instead of nesting them.

--- a/.github/workflows/gemini-cli.yml
+++ b/.github/workflows/gemini-cli.yml
@@ -313,3 +313,4 @@ jobs:
             - **Always commit and push your changes if you modify code or documentation.**
             - **If you are unsure about the fix or answer, explain your reasoning and ask clarifying questions.**
             - **Follow project conventions and best practices.**
+            - **IMPORTANT: Do not use command substitution (e.g., `$(...)`). It is blocked for security. You must run commands sequentially. First, run a command to get the information you need (like a comment ID). Then, in a separate step, use that information in the next command.**
