fix(ci): Provide more explicit instructions to prevent command substitution
The workflow continues to fail intermittently because the model defaults to using command substitution for multi-step tasks like updating a checklist.

This commit replaces the checklist update instructions with a more explicit, multi-step guide. It now strictly enforces running the 'list comments' and 'edit comment' commands separately and adds a critical warning, leaving no ambiguity for the model.

--- a/.github/workflows/gemini-cli.yml
+++ b/.github/workflows/gemini-cli.yml
@@ -265,10 +265,9 @@ jobs:
                  - Use: `gh pr comment "${ISSUE_NUMBER}" --body "<plan>"` or `gh issue comment "${ISSUE_NUMBER}" --body "<plan>"` to post the initial plan.
                  - As you make progress, keep the checklist visible and up to date by editing the same comment (check off completed tasks with `- [x]`).
                    - To update the checklist:
-                     1. Find the comment ID for the checklist (use `gh pr comment list "${ISSUE_NUMBER}"` or `gh issue comment list "${ISSUE_NUMBER}"`).
-                     2. Edit the comment with the updated checklist:
-                        - For PRs: `gh pr comment --edit <comment-id> --body "<updated plan>"`
-                        - For Issues: `gh issue comment --edit <comment-id> --body "<updated plan>"`
+                     1. **First, find the comment ID.** Run `gh issue comment list "${ISSUE_NUMBER}"` (or `gh pr comment list` for PRs). Look through the output to find the comment with the plan you posted earlier and get its ID.
+                     2. **Second, edit the comment.** In a separate command, run `gh issue comment --edit <comment-id> --body "<updated plan>"` (or `gh pr comment --edit`), replacing `<comment-id>` with the ID you found in the previous step.
+                     3. **CRITICAL:** You MUST use two separate commands. DO NOT combine them with `$(...)` or other shell features.
                      3. The checklist should only be maintained as a comment on the issue or PR. Do not track or update the checklist in code files.
                - If the fix requires code changes, determine which files and lines are affected. If clarification is needed, note any questions for the user.
                - Make the necessary code or documentation changes using the available tools (e.g., `write_file`). Ensure all changes follow project conventions and best practices. Reference all shell variables as `"${VAR}"` (with quotes and braces) to prevent errors.
