--- a/.github/workflows/gemini-cli.yml
+++ b/.github/workflows/gemini-cli.yml
@@ -262,9 +262,9 @@ jobs:
                    - [ ] Update documentation
                    - [ ] Verify the fix and close the issue
                    ```
-                 - To post the initial plan, you MUST use a file:
-                   1. **First, write your plan to a file.** Use the `write_file` tool, for example: `write_file("plan.md", "### Plan\n- [ ] ...")`
-                   2. **Then, post the plan from the file.** Use the `--body-file` flag, for example: `gh issue comment "${ISSUE_NUMBER}" --body-file "plan.md"`
+                 - To post the initial plan, you MUST use a file with an absolute path:
+                   1. **First, write your plan to a temporary file.** Use the `write_file` tool with an absolute path. For example: `write_file("${RUNNER_TEMP}/plan.md", "### Plan\n- [ ] ...")`
+                   2. **Then, post the plan from that file.** Use the same absolute path with the `--body-file` flag. For example: `gh issue comment "${ISSUE_NUMBER}" --body-file "${RUNNER_TEMP}/plan.md"`
                  - As you make progress, keep the checklist visible and up to date by editing the same comment (check off completed tasks with `- [x]`).
                    - To update the checklist:
                      1. **First, find the comment ID.** Run `gh issue comment list "${ISSUE_NUMBER}"` (or `gh pr comment list` for PRs). Look through the output to find the comment with the plan you posted earlier and get its ID.
