fix(ci): Add explicit prohibition against using 'gh api' for comment edits
The workflow failed again because the model, after struggling to find a comment ID, deviated from the provided instructions and attempted to use 'gh api' with command substitution.

This commit adds a final, critical instruction to the prompt, explicitly forbidding the use of 'gh api' for editing comments and forcing the model to adhere strictly to the 'gh issue comment --edit --body-file' method. This removes the last known point of failure and ambiguity.

--- a/.github/workflows/gemini-cli.yml
+++ b/.github/workflows/gemini-cli.yml
@@ -269,8 +269,8 @@ jobs:
                   - To update the checklist, you MUST also use a file:
                      1. **First, find the comment ID.** Run `gh issue comment list "${ISSUE_NUMBER}"` (or `gh pr comment list` for PRs) to find the ID of the comment containing the plan.
                      2. **Then, write the updated plan to a temporary file.** For example: `write_file("${RUNNER_TEMP}/updated_plan.md", "### Plan\n- [x] ...")`
-                     3. **Finally, edit the comment using the file.** For example: `gh issue comment --edit <comment-id> --body-file "${RUNNER_TEMP}/updated_plan.md"`
-                     4. **CRITICAL:** You MUST use separate commands for each step. DO NOT combine them with `$(...)`.
+                     3. **Finally, edit the comment using the file.** You MUST use the `gh issue comment --edit` command. For example: `gh issue comment --edit <comment-id> --body-file "${RUNNER_TEMP}/updated_plan.md"`
+                     4. **CRITICAL:** You MUST use separate commands for each step. DO NOT combine them with `$(...)` or try to use `gh api` for this task. Stick to the commands shown in the examples.
                      3. The checklist should only be maintained as a comment on the issue or PR. Do not track or update the checklist in code files.
                - If the fix requires code changes, determine which files and lines are affected. If clarification is needed, note any questions for the user.
                - Make the necessary code or documentation changes using the available tools (e.g., `write_file`). Ensure all changes follow project conventions and best practices. Reference all shell variables as `"${VAR}"` (with quotes and braces) to prevent errors.
