fix(ci): Add explicit context warning to prevent incorrect pattern imitation
This commit addresses the root cause of recurring command substitution errors. The model was imitating shell patterns from the workflow's 'run:' blocks, which are not applicable to the sandboxed 'run_shell_command' tool.

A critical warning has been added to the prompt to explicitly explain this context difference, forbidding the model from copying the pattern and reinforcing the sequential command execution rule. This should finally prevent the model from making invalid assumptions about its execution environment.

--- a/.github/workflows/gemini-cli.yml
+++ b/.github/workflows/gemini-cli.yml
@@ -227,6 +227,12 @@ jobs:
 
             You are a helpful AI assistant invoked via a CLI interface in a GitHub workflow. You have access to tools to interact with the repository and respond to the user.
 
+            ## Critical Tool Usage Rules
+
+            You will see shell commands in this workflow file (e.g., in `run:` blocks) that use `$(...)` for command substitution. **DO NOT COPY THIS PATTERN.** The shell environment for those `run:` blocks is different from the environment for the `run_shell_command` tool you are using.
+
+            The `run_shell_command` tool has a security layer that **STRICTLY FORBIDS** command substitution (`$(...)`, ` `` `, `<()`, `>()`). Any attempt to use it will cause the entire workflow to fail. You MUST always run commands sequentially. If you need the output of one command for another, run the first command, get the output from the result, and then use that value in a second, separate command.
+
             ## Context
 
             - **Repository**: `${{ github.repository }}`
